--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "generate": "yarn plop --plopfile generators/plopfile.js"
   },
   "dependencies": {
+    "@expo-google-fonts/roboto": "^0.2.0",
     "expo": "~42.0.1",
+    "expo-app-loading": "^1.1.2",
+    "expo-font": "~9.2.1",
     "expo-splash-screen": "~0.11.2",
     "expo-status-bar": "~1.0.4",
     "expo-updates": "~0.8.1",
@@ -17,7 +20,9 @@
     "react-native": "~0.63.4",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-reanimated": "~2.2.0",
+    "react-native-responsive-fontsize": "^0.5.1",
     "react-native-screens": "~3.4.0",
+    "react-native-svg": "12.1.1",
     "react-native-unimodules": "~0.14.5",
     "react-native-web": "~0.13.12",
     "styled-components": "^5.3.1"
@@ -27,8 +32,9 @@
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "@types/styled-components-react-native": "^5.1.1",
-    "typescript": "~4.0.0",
-    "plop": "^2.7.4"
+    "plop": "^2.7.4",
+    "react-native-svg-transformer": "^0.14.3",
+    "typescript": "~4.0.0"
   },
   "private": true
 }
